corrected select code for label priority

--- a/Contact_Form/index.html
+++ b/Contact_Form/index.html
@@ -31,7 +31,7 @@
     <br>
     <div>
         <label>Priority</label>
-        <select name="priority" required placeholder="Select">
+        <select name="priority">
         <option value="disabled selected">Please Select</option>
         <option value="Emergent">Emergent (immediately)</option>
         <option value="Urgent">Urgent (next business day)</option>
